removed unnecessary css properties, made some namings more consistent, removed text-transform on buttons (for real this time)

--- a/src/app/mainpage/menubar/menubar.component.html
+++ b/src/app/mainpage/menubar/menubar.component.html
@@ -46,8 +46,8 @@
     <md-button class="md-icon-button searchButton md-whiteframe-2dp" ng-click="$menubar.search()">
       <i layout="fill" class="material-icons">search</i>
     </md-button>
-    <form id="searchForm" autocomplete="off" ng-submit="$menubar.search()">
-      <md-input-container md-no-float class="search">
+    <form class="searchForm" autocomplete="off" ng-submit="$menubar.search()">
+      <md-input-container md-no-float class="searchContainer">
         <input class="searchInput md-whiteframe-6dp" placeholder=" Search Twitter" type="text" ng-model="$menubar.$searchService.searchText" >
       </md-input-container>
     </form>
