--- a/src/main.css
+++ b/src/main.css
@@ -2,11 +2,6 @@
   font-family: Noto Sans;
 }
 
-margin-top: 68px;
-.searchDial {
-  margin-top: 68px;
-}
-
 .pageWidth {
   width: 90vw;
 }
@@ -36,7 +31,8 @@ margin-top: 68px;
   display: flex;
 }
 
-.search {
+.searchContainer {
+  width: 20vw;
   margin-top: 40px;
 }
 
@@ -44,14 +40,18 @@ md-dialog {
   width: 80vw;
 }
 
+.md-button {
+  text-transform: none;
+}
+
 .profileButtonIcon {
-  margin-top: 5px;
+  text-transform: none;
+  margin-top: 6px;
   float: left;
   color: rgba(255,255,255,0.87);
 }
 
-button, md-button, .profileButtonText {
-  text-transform: none;
+.profileButtonText {
   margin-left: 8px;
   margin-right: 8px;
   float: right;
@@ -70,7 +70,12 @@ button, md-button, .profileButtonText {
     border-color: white
 }
 
+.searchInput {
+  width: 20%;
+}
+
 input[type=text].searchInput {
+
   background-color: rgb(255, 255, 255);
 }
 
