made html classes consistently formatted with the majority style - camelCase

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <md-content layout-align="center center" layout="column" layout-fill class="ocean-background">
-  <md-tabs md-dynamic-height md-border-bottom class="login-tab">
+  <md-tabs md-dynamic-height md-border-bottom class="loginTab">
     <md-tab id="tab1">
       <md-tab-label>Current User</md-tab-label>
       <md-tab-body>
