--- a/src/app/mainpage/search/search.component.html
+++ b/src/app/mainpage/search/search.component.html
@@ -1,5 +1,5 @@
-<md-content layout-align="center center" layout="column" class="SearchTabs">
-  <md-tabs md-dynamic-height md-border-bottom class="login-tab" layout-fill>
+<md-content layout-align="center center" layout="column" class="searchTabs">
+  <md-tabs md-dynamic-height md-border-bottom class="loginTab" layout-fill>
     <md-tab id="tab1">
       <md-tab-label>Hashtag</md-tab-label>
       <md-tab-body>
