--- a/src/app/mainpage/page/feed/feed.component.html
+++ b/src/app/mainpage/page/feed/feed.component.html
@@ -3,7 +3,8 @@
             <md-list-item ng-hide="$feed.getFeed()  && $feed.getFeed().length > 0">No results found</md-list-item>
             <md-list-item class="md-3-line" ng-repeat="item in $feed.getFeed()">
               <div class="md-list-item-text" layout="column">
-                <h3 ng-click="null">>{{ item.author.username }}</h3>
+                <md-divider></md-divider>
+                <h3 ng-click="null">{{ item.author.username }}</h3>
                 <p>{{ item.content }}</p>
                 <p>{{ item.posted * 1000 | date:'HH:mm:ss' }}</p>
                 <div ng-show='item.inReplyTo'>
