--- a/src/app/mainpage/page/follow/follow.component.html
+++ b/src/app/mainpage/page/follow/follow.component.html
@@ -13,7 +13,7 @@
       <md-tab-body>
         <md-list>
           <md-list-item ng-repeat="item in $follow.getfollowing()">
-            <p>{{item.username}}</p>
+            <md-button ng-click="$follow.google(item.username)">{{item.username}}</md-button>
           </md-list-item>
         </md-list>
       </md-tab-body>
