you can link to profile through the follower/following, and with quinton's stateservice implementation, there are some consistency in populating the correct follower/following for each profile.

--- a/src/app/mainpage/page/tweet/tweet.component.html
+++ b/src/app/mainpage/page/tweet/tweet.component.html
@@ -1,8 +1,11 @@
 
-        <h3 ng-click="null">User: {{$tweet.getuser()}}</h3>
-        <md-list flex="">
-          <md-list-item ng-repeat="item in $tweet.gettweets()" ng-click="null">
-            <p>Posted: {{ item.posted * 1000 | date:'HH:mm:ss' }}</p> <br>
-            <p>{{item.content}}</p><br>
-          </md-list-item>
-        </md-list>
+<h3 ng-click="null">User: {{$tweet.$profileService.username}}</h3>
+<md-list flex="">
+  <div class="md-list-item-text" layout="column">
+    <md-divider></md-divider>
+    <md-list-item ng-repeat="item in $tweet.gettweets()" ng-click="null">
+      <p>Posted: {{ item.posted | date:'HH:mm:ss' }}</p>
+      <p>{{item.content}}</p>
+    </div>
+  </md-list-item>
+</md-list>
