--- a/src/app/mainpage/page/feed/feed.component.html
+++ b/src/app/mainpage/page/feed/feed.component.html
@@ -5,7 +5,8 @@
               <div class="md-list-item-text" layout="column">
                 <md-divider></md-divider>
                 <h3 ng-click="null">{{ item.author.username }}</h3>
-                <p>{{ item.content }}</p>
+                <!-- <p>{{ item.content }}</p> -->
+                <p compile="item.content"></p>
                 <p>{{ item.posted * 1000 | date:'HH:mm:ss' }}</p>
                 <div ng-show='item.inReplyTo'>
                   <h3 ng-click="null">Reply From {{ item.author.username }}</h3>
