created link states

--- a/src/app/mainpage/page/feed/feed.component.html
+++ b/src/app/mainpage/page/feed/feed.component.html
@@ -4,14 +4,14 @@
             <md-list-item class="md-3-line" ng-repeat="item in $feed.getFeed()">
               <div class="md-list-item-text" layout="column">
                 <md-divider></md-divider>
-                <h3 ng-click="$feed.feedUser(item.author.username)">{{ item.author.username }}</h3>
+                <h3 ng-click="$feed.feedUser(item.author.username)"><a href="">{{ item.author.username }}</a></h3>
                 <p compile="item.content"></p>
                 <p>{{ item.posted | date:'medium' }}</p>
                 <div ng-show='item.inReplyTo'>
-                  <h3 ng-click="$feed.feedUser(item.inReplyTo.author.username)">In Reply To: {{ item.inReplyTo.author.username }}</h3>
+                  <h3 ng-click="$feed.feedUser(item.inReplyTo.author.username)">In Reply To: <a href="">{{ item.inReplyTo.author.username }}</a></h3>
                 </div>
                 <div ng-show='item.repostOf'>
-                  <h3 ng-click="$feed.feedUser(item.repostOf.author.username)">Repost Of: {{ item.repostOf.author.username }}</h3>
+                  <h3 ng-click="$feed.feedUser(item.repostOf.author.username)">Repost Of: <a href="">{{ item.repostOf.author.username }}</a></h3>
                 </div>
                 </br>
               </div>
