Implemented delete button in edit state; Fixed bug where refreshing feed would sometimes happen before the tweet actually got posted.

--- a/src/app/mainpage/edit/edit.component.html
+++ b/src/app/mainpage/edit/edit.component.html
@@ -21,9 +21,14 @@
           <input type="text" ng-model="$edit.$authenticate.profile.phone"/>
         </md-input-container>
       </div>
-      <div align="center">
-        <md-button class="md-raised md-primary" type="submit" ng-click="$edit.update()" layout-fill>Update</md-button>
-      </div>
     </form>
+    <div class="editButtonContainer">
+      <md-button class="md-raised md-primary" type="submit" ng-click="$edit.update()" layout-fill>Update</md-button>
+    </div>
+    <md-divider md-inset ng-if="!$last"></md-divider>
+    <div class="editButtonContainer">
+      <md-button class="md-raised md-warn" type="submit" ng-click="$edit.delete()" layout-fill>Delete Account</md-button>
+    </div>
+
   </md-card-actions>
 </md-card>
