added partial matching in search

--- a/src/app/mainpage/search/search.component.html
+++ b/src/app/mainpage/search/search.component.html
@@ -32,8 +32,8 @@
       <md-tab-body>
         <md-list flex="">
           <md-list-item ng-hide="$search.$searchService.users.data">No results found</md-list-item>
-          <md-list-item ng-show="$search.$searchService.users.data">
-            <md-button ng-click="$search.userProfile($search.$searchService.users.data.username)">{{ $search.$searchService.users.data.username }}</md-button>
+          <md-list-item ng-show="$search.$searchService.users.data" ng-repeat="user in $search.$searchService.users.data"
+            <md-button ng-click="$search.userProfile(user.username)">{{ user.username }}</md-button>
           </md-list-item>
         </md-list>
       </md-tab-body>
