--- a/src/app/mainpage/page/tweet/tweet.component.html
+++ b/src/app/mainpage/page/tweet/tweet.component.html
@@ -1,5 +1,13 @@
 
-<h3 ng-click="null">User: {{$tweet.$profileService.username}}</h3>
+<h3>
+  User : {{$tweet.$profileService.username}}
+    <md-button ng-click="$tweet.followuser($tweet.$profileService.username)" ng-hide="$tweet.checkfollower() || $tweet.$profileService.username===$tweet.$authenticate.username">
+      Follow
+    </md-button>
+    <md-button ng-click="$tweet.unfollowuser($tweet.$profileService.username)" ng-hide="!$tweet.checkfollower() || $tweet.$profileService.username===$tweet.$authenticate.username">
+      Unfollow
+    </md-button>
+</h3>
 <md-list flex="">
   <div class="md-list-item-text" layout="column">
     <md-divider></md-divider>
@@ -9,3 +17,7 @@
     </div>
   </md-list-item>
 </md-list>
+
+
+<!-- <md-button ng-click="$search.$searchService.likeTweet(item)" ng-hide="item.liked">like</md-button>
+              <md-button ng-click="$search.$searchService.unlikeTweet(item)" ng-show="item.liked">unlike</md-button> -->
