--- a/src/app/mainpage/search/search.component.html
+++ b/src/app/mainpage/search/search.component.html
@@ -21,6 +21,8 @@
               </div>
               <md-button ng-click="$search.$tweetService.likeTweet(tweet)" ng-hide="tweet.liked">like</md-button>
               <md-button ng-click="$search.$tweetService.unlikeTweet(tweet)" ng-show="tweet.liked">unlike</md-button>
+              <md-button ng-click="$search.$tweetService.repostTweet(tweet.id)">repost</md-button>
+              <md-button ng-click="$search.$tweetService.showTweetPrompt($event, tweet.id)">reply</md-button>
             </div>
             </br>
           </md-list-item>
