--- a/src/main.css
+++ b/src/main.css
@@ -15,7 +15,11 @@
 
 .ocean-background {
   background-image: url('./app/global/resources/ocean-background.png');
-  background-size: 100% 100%;
+  background-size: 150% 150%;
+}
+
+.tweetContent {
+  font-size: 52;
 }
 
 .loginTab {
