--- a/src/app/mainpage/search/search.component.html
+++ b/src/app/mainpage/search/search.component.html
@@ -32,8 +32,8 @@
       <md-tab-body>
         <md-list flex="">
           <md-list-item ng-hide="$search.$searchService.users && $search.$searchService.users.length > 0">No results found</md-list-item>
-          <md-list-item ng-repeat="user in $search.$searchService.users"
-            <md-button ng-click="$search.userProfile(user.username)">{{ user.username }}</md-button>
+          <md-list-item ng-repeat="user in $search.$searchService.users">
+            <md-button ng-click="$profileService.goToProfile(user.username)">{{ user.username }}</md-button>
           </md-list-item>
         </md-list>
       </md-tab-body>
