--- a/src/app/mainpage/page/page.component.html
+++ b/src/app/mainpage/page/page.component.html
@@ -3,7 +3,7 @@
   <follow layout="column" flex="25" layout-fill></follow>
 
   <md-content layout-fill class="transparentBackground">
-    <md-tabs layout-fill class="whiteBackground">
+    <md-tabs layout-fill class="loginTab">
       <md-tab id="tab1">
         <md-tab-label>{{$page.$stateService.currentTab}}</md-tab-label>
         <md-tab-body>
@@ -13,26 +13,7 @@
       <md-tab id="tab2">
         <md-tab-label>Mentions</md-tab-label>
         <md-tab-body>
-          <md-list flex="">
-            <md-list-item ng-hide="$page.$profileService.mentioned.data && $page.$profileService.mentioned.data.length > 0">No results found</md-list-item>
-            <md-list-item class="md-3-line" ng-repeat="item in $page.$profileService.mentioned.data">
-              <div class="md-list-item-text md-whiteframe-2dp" layout="column">
-                <h3 ng-click="null">>{{ item.author.username }}</h3>
-                <p>{{ item.content }}</p>
-                <p>{{ item.posted | date:'HH:mm:ss' }}</p>
-                <div ng-show='item.inReplyTo'>
-                  <h3 ng-click="null">Reply From</h3>
-                </div>
-                <div ng-show='item.repostOf'>
-                  <h3 ng-click="null">Repost Of</h3>
-                  <h3>>{{item.repostOf.author.username}} </h3>
-                  <p>{{ item.repostOf.content }}</p>
-                  <p>{{ item.repostOf.posted | date:'HH:mm:ss' }}</p>
-                </div>
-              </div>
-              </br>
-            </md-list-item>
-          </md-list>
+          <mentions></mentions>
         </md-tab-body>
       </md-tab>
     </md-tabs>
