--- a/src/app/mainpage/page/tweet/tweet.component.html
+++ b/src/app/mainpage/page/tweet/tweet.component.html
@@ -9,15 +9,26 @@
     </md-button>
 </h3>
 <md-list flex="">
-  <div class="md-list-item-text" layout="column">
-    <md-divider></md-divider>
-    <md-list-item ng-repeat="item in $tweet.gettweets()" ng-click="null">
-      <p>Posted: {{ item.posted | date:'medium' }}</p>
-      <p>{{item.content}}</p>
+  <md-list-item ng-hide="$tweet.gettweets()  && $tweet.gettweets().length > 0">No results found</md-list-item>
+  <md-list-item class="md-3-line tweetListItem" ng-repeat="tweet in $tweet.gettweets()">
+    <div class="md-list-item-text md-whiteframe-3dp tweetListItem whiteBackground" layout="column">
+      <div class="tweetHead">
+        <div class="author">
+          <h2>Author: <a href="" ng-click="$profileService.goToProfile(item.author.username)">{{ tweet.author.username }}</a></h2>
+          <p>Posted: {{ tweet.posted | date:'medium' }}</p>
+        </div>
+        <md-button ng-click="$tweet.$tweetService.likeTweet(tweet)" ng-hide="tweet.liked" class="like">Like</md-button>
+        <md-button ng-click="$tweet.$tweetService.unlikeTweet(tweet)" ng-show="tweet.liked" class="unlike">Unlike</md-button>
+        <md-button ng-click="$tweet.$tweetService.repostTweet(tweet.id)" class="repost">repost</md-button>
+        <md-button ng-click="$tweet.$tweetService.showTweetPrompt($event, tweet.id)" class="reply">reply</md-button>
+      </div>
+      <p compile="tweet.content" style="font-size:20px; color:black"></p>
+      <div ng-show='tweet.inReplyTo'>
+        <h3>In Reply To: <a href ng-click="$profileService.goToProfile(tweet.inReplyTo.author.username)">{{ tweet.inReplyTo.author.username }}</a>: <a href ng-click="null">{{ tweet.inReplyTo.content }}</a></h3>
+      </div>
+      <div ng-show='tweet.repostOf'>
+        <h3>Repost Of: <a href ng-click="$profileService.goToProfile(tweet.repostOf.author.username)">{{ tweet.repostOf.author.username }}</a>: <a href ng-click="null">{{ tweet.repostOf.content }}</a></h3>
+      </div>
     </div>
   </md-list-item>
 </md-list>
-
-
-<!-- <md-button ng-click="$search.$searchService.likeTweet(item)" ng-hide="item.liked">like</md-button>
-              <md-button ng-click="$search.$searchService.unlikeTweet(item)" ng-show="item.liked">unlike</md-button> -->
